corregir num iter

--- a/src/churn/C3012/APO3012-202107_100271.ipynb
+++ b/src/churn/C3012/APO3012-202107_100271.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-12-03 01:12:22 UTC\""
+       "[1] \"2025-12-03 04:01:11 UTC\""
       ]
      },
      "metadata": {},
@@ -39,8 +39,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 658633</td><td>35.2</td><td>1454657</td><td>77.7</td><td>1227760</td><td>65.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1222301</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975161</td><td>15.1</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 752150</td><td>40.2</td><td>1454654</td><td>77.7</td><td>1454654</td><td>77.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1378828</td><td>10.6</td><td>8388608</td><td>64.0</td><td>2234168</td><td>17.1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -49,8 +49,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  658633 & 35.2 & 1454657 & 77.7 & 1227760 & 65.6\\\\\n",
-       "\tVcells & 1222301 &  9.4 & 8388608 & 64.0 & 1975161 & 15.1\\\\\n",
+       "\tNcells &  752150 & 40.2 & 1454654 & 77.7 & 1454654 & 77.7\\\\\n",
+       "\tVcells & 1378828 & 10.6 & 8388608 & 64.0 & 2234168 & 17.1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -59,14 +59,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  658633 | 35.2 | 1454657 | 77.7 | 1227760 | 65.6 |\n",
-       "| Vcells | 1222301 |  9.4 | 8388608 | 64.0 | 1975161 | 15.1 |\n",
+       "| Ncells |  752150 | 40.2 | 1454654 | 77.7 | 1454654 | 77.7 |\n",
+       "| Vcells | 1378828 | 10.6 | 8388608 | 64.0 | 2234168 | 17.1 |\n",
        "\n"
       ],
       "text/plain": [
        "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  658633 35.2 1454657    77.7 1227760  65.6\n",
-       "Vcells 1222301  9.4 8388608    64.0 1975161  15.1"
+       "Ncells  752150 40.2 1454654    77.7 1454654  77.7\n",
+       "Vcells 1378828 10.6 8388608    64.0 2234168  17.1"
       ]
      },
      "metadata": {},
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +138,6 @@
       "Sourcing: deflactar_por_ipc.R\n",
       "\n",
       "Sourcing: features_historicos_optimizados.R\n",
-      "\n",
-      "Loading required package: Rcpp\n",
       "\n",
       "Sourcing: features_historicos.R\n",
       "\n",
@@ -171,22 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "'APO3011-202107_100271'"
+       "'APO3012-202107_100271'"
       ],
       "text/latex": [
-       "'APO3011-202107\\_100271'"
+       "'APO3012-202107\\_100271'"
       ],
       "text/markdown": [
-       "'APO3011-202107_100271'"
+       "'APO3012-202107_100271'"
       ],
       "text/plain": [
-       "[1] \"APO3011-202107_100271\""
+       "[1] \"APO3012-202107_100271\""
       ]
      },
      "metadata": {},
@@ -194,7 +192,7 @@
     }
    ],
    "source": [
-    "experimento_folder"
+    "PARAM$experimento"
    ]
   },
   {
