me guardo las ganancias C3012

--- a/src/churn/C3012/APO3012-202107_100271.ipynb
+++ b/src/churn/C3012/APO3012-202107_100271.ipynb
@@ -2402,11 +2402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "id": "xElu4s5W4rX7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:06:44 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# genero los modelitos\n",
     "dir.create( \"modelitos\", showWarnings= FALSE)\n",
@@ -2450,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,9 +2507,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:08:02 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# aplico el modelo a los datos del future\n",
     "dir.create(\"predicciones_modelitos\", showWarnings = FALSE)\n",
@@ -2572,9 +2592,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 1 × 9 of type dbl</caption>\n",
+       "<tbody>\n",
+       "\t<tr><td>4.24e+08</td><td>425200000</td><td>423200000</td><td>427600000</td><td>424800000</td><td>424400000</td><td>428800000</td><td>427600000</td><td>431200000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 1 × 9 of type dbl\n",
+       "\\begin{tabular}{lllllllll}\n",
+       "\t 4.24e+08 & 425200000 & 423200000 & 427600000 & 424800000 & 424400000 & 428800000 & 427600000 & 431200000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 1 × 9 of type dbl\n",
+       "\n",
+       "| 4.24e+08 | 425200000 | 423200000 | 427600000 | 424800000 | 424400000 | 428800000 | 427600000 | 431200000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1]     [,2]      [,3]      [,4]      [,5]      [,6]      [,7]     \n",
+       "[1,] 4.24e+08 425200000 423200000 427600000 424800000 424400000 428800000\n",
+       "     [,8]      [,9]     \n",
+       "[1,] 427600000 431200000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mganancias"
    ]
@@ -2599,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,11 +2665,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "id": "gWW3tatE12je"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:08:03 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# genero archivos de fantasia, que NO son el que voy a subir a la Pseudo Competencia Kaggle\n",
     "envios <- 11000\n",
@@ -2660,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2672,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2691,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2706,9 +2770,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "431200000"
+      ],
+      "text/latex": [
+       "431200000"
+      ],
+      "text/markdown": [
+       "431200000"
+      ],
+      "text/plain": [
+       "[1] 431200000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "13000"
+      ],
+      "text/latex": [
+       "13000"
+      ],
+      "text/markdown": [
+       "13000"
+      ],
+      "text/plain": [
+       "[1] 13000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 1 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>foto_mes</th><th scope=col>meta_modelo</th><th scope=col>prob</th><th scope=col>gan_acum</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1462913415</td><td>202107</td><td>1</td><td>0.3209072</td><td>431200000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 1 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " numero\\_de\\_cliente & foto\\_mes & meta\\_modelo & prob & gan\\_acum\\\\\n",
+       " <int> & <int> & <int> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1462913415 & 202107 & 1 & 0.3209072 & 431200000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 1 × 5\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | foto_mes &lt;int&gt; | meta_modelo &lt;int&gt; | prob &lt;dbl&gt; | gan_acum &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1462913415 | 202107 | 1 | 0.3209072 | 431200000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente foto_mes meta_modelo prob      gan_acum \n",
+       "1 1462913415        202107   1           0.3209072 431200000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_prediccion$gan_acum - mcorte_mejor ) )\n",
     "vmodelo <- tb_prediccion[ icerca, meta_modelo ]\n",
@@ -2721,9 +2862,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "13000"
+      ],
+      "text/latex": [
+       "13000"
+      ],
+      "text/markdown": [
+       "13000"
+      ],
+      "text/plain": [
+       "[1] 13000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_pred$gan_acum - mcorte_mejor ) )\n",
     "icerca"
@@ -2731,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2754,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2763,11 +2923,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "id": "9zA_W25c15DP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:08:04 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -2781,16 +2951,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$future</dt>\n",
+       "\t\t<dd>202109</dd>\n",
+       "\t<dt>$undersampling</dt>\n",
+       "\t\t<dd>0.05</dd>\n",
+       "\t<dt>$meses</dt>\n",
+       "\t\t<dd><style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>201901</li><li>201902</li><li>201903</li><li>201904</li><li>201905</li><li>201906</li><li>201907</li><li>201908</li><li>201909</li><li>201910</li><li>201911</li><li>201912</li><li>202001</li><li>202002</li><li>202003</li><li>202004</li><li>202005</li><li>202007</li><li>202008</li><li>202009</li><li>202010</li><li>202011</li><li>202012</li><li>202101</li><li>202102</li><li>202103</li><li>202104</li><li>202105</li><li>202106</li><li>202107</li></ol>\n",
+       "</dd>\n",
+       "\t<dt>$training</dt>\n",
+       "\t\t<dd><style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>201901</li><li>201902</li><li>201903</li><li>201904</li><li>201905</li><li>201906</li><li>201907</li><li>201908</li><li>201909</li><li>201910</li><li>201911</li><li>201912</li><li>202001</li><li>202002</li><li>202003</li><li>202004</li><li>202005</li><li>202007</li><li>202008</li><li>202009</li><li>202010</li><li>202011</li><li>202012</li><li>202101</li><li>202102</li><li>202103</li><li>202104</li><li>202105</li><li>202106</li><li>202107</li></ol>\n",
+       "</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$future] 202109\n",
+       "\\item[\\$undersampling] 0.05\n",
+       "\\item[\\$meses] \\begin{enumerate*}\n",
+       "\\item 201901\n",
+       "\\item 201902\n",
+       "\\item 201903\n",
+       "\\item 201904\n",
+       "\\item 201905\n",
+       "\\item 201906\n",
+       "\\item 201907\n",
+       "\\item 201908\n",
+       "\\item 201909\n",
+       "\\item 201910\n",
+       "\\item 201911\n",
+       "\\item 201912\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202004\n",
+       "\\item 202005\n",
+       "\\item 202007\n",
+       "\\item 202008\n",
+       "\\item 202009\n",
+       "\\item 202010\n",
+       "\\item 202011\n",
+       "\\item 202012\n",
+       "\\item 202101\n",
+       "\\item 202102\n",
+       "\\item 202103\n",
+       "\\item 202104\n",
+       "\\item 202105\n",
+       "\\item 202106\n",
+       "\\item 202107\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\item[\\$training] \\begin{enumerate*}\n",
+       "\\item 201901\n",
+       "\\item 201902\n",
+       "\\item 201903\n",
+       "\\item 201904\n",
+       "\\item 201905\n",
+       "\\item 201906\n",
+       "\\item 201907\n",
+       "\\item 201908\n",
+       "\\item 201909\n",
+       "\\item 201910\n",
+       "\\item 201911\n",
+       "\\item 201912\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202004\n",
+       "\\item 202005\n",
+       "\\item 202007\n",
+       "\\item 202008\n",
+       "\\item 202009\n",
+       "\\item 202010\n",
+       "\\item 202011\n",
+       "\\item 202012\n",
+       "\\item 202101\n",
+       "\\item 202102\n",
+       "\\item 202103\n",
+       "\\item 202104\n",
+       "\\item 202105\n",
+       "\\item 202106\n",
+       "\\item 202107\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$future\n",
+       ":   202109\n",
+       "$undersampling\n",
+       ":   0.05\n",
+       "$meses\n",
+       ":   1. 201901\n",
+       "2. 201902\n",
+       "3. 201903\n",
+       "4. 201904\n",
+       "5. 201905\n",
+       "6. 201906\n",
+       "7. 201907\n",
+       "8. 201908\n",
+       "9. 201909\n",
+       "10. 201910\n",
+       "11. 201911\n",
+       "12. 201912\n",
+       "13. 202001\n",
+       "14. 202002\n",
+       "15. 202003\n",
+       "16. 202004\n",
+       "17. 202005\n",
+       "18. 202007\n",
+       "19. 202008\n",
+       "20. 202009\n",
+       "21. 202010\n",
+       "22. 202011\n",
+       "23. 202012\n",
+       "24. 202101\n",
+       "25. 202102\n",
+       "26. 202103\n",
+       "27. 202104\n",
+       "28. 202105\n",
+       "29. 202106\n",
+       "30. 202107\n",
+       "\n",
+       "\n",
+       "\n",
+       "$training\n",
+       ":   1. 201901\n",
+       "2. 201902\n",
+       "3. 201903\n",
+       "4. 201904\n",
+       "5. 201905\n",
+       "6. 201906\n",
+       "7. 201907\n",
+       "8. 201908\n",
+       "9. 201909\n",
+       "10. 201910\n",
+       "11. 201911\n",
+       "12. 201912\n",
+       "13. 202001\n",
+       "14. 202002\n",
+       "15. 202003\n",
+       "16. 202004\n",
+       "17. 202005\n",
+       "18. 202007\n",
+       "19. 202008\n",
+       "20. 202009\n",
+       "21. 202010\n",
+       "22. 202011\n",
+       "23. 202012\n",
+       "24. 202101\n",
+       "25. 202102\n",
+       "26. 202103\n",
+       "27. 202104\n",
+       "28. 202105\n",
+       "29. 202106\n",
+       "30. 202107\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$future\n",
+       "[1] 202109\n",
+       "\n",
+       "$undersampling\n",
+       "[1] 0.05\n",
+       "\n",
+       "$meses\n",
+       " [1] 201901 201902 201903 201904 201905 201906 201907 201908 201909 201910\n",
+       "[11] 201911 201912 202001 202002 202003 202004 202005 202007 202008 202009\n",
+       "[21] 202010 202011 202012 202101 202102 202103 202104 202105 202106 202107\n",
+       "\n",
+       "$training\n",
+       " [1] 201901 201902 201903 201904 201905 201906 201907 201908 201909 201910\n",
+       "[11] 201911 201912 202001 202002 202003 202004 202005 202007 202008 202009\n",
+       "[21] 202010 202011 202012 202101 202102 202103 202104 202105 202106 202107\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "PARAM$train_entrega"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2800,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2831,9 +3197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:08:11 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -2853,7 +3229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,9 +3243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filas 258121 columnas 2530 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:08:16 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dtrain_final <- lgb.Dataset(\n",
     "  data= data.matrix(dataset_train_final[training == 1L, campos_buenos, with= FALSE]),\n",
