agrego generacion de archivo de entrega

--- a/src/churn/C3012/APO3012-202107_100271.ipynb
+++ b/src/churn/C3012/APO3012-202107_100271.ipynb
@@ -3357,11 +3357,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Archivo de entrega"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "library(data.table)\n",
+    "\n",
+    "# 1) Listar todos los archivos de predicciones por semilla\n",
+    "pred_files <- list.files(\n",
+    "  \"predicciones_produccion\",\n",
+    "  pattern = \"^pred_semilla_.*\\\\.csv$\",\n",
+    "  full.names = TRUE\n",
+    ")\n",
+    "\n",
+    "if (length(pred_files) == 0L) {\n",
+    "  stop(\"No se encontraron archivos pred_semilla_*.csv en 'predicciones_produccion/'\")\n",
+    "}\n",
+    "\n",
+    "# 2) Leer todos los archivos\n",
+    "pred_list <- lapply(pred_files, fread)\n",
+    "\n",
+    "# 3) Construir matriz de probabilidades (una columna por semilla)\n",
+    "probs_mat <- sapply(pred_list, `[[`, \"prob\")\n",
+    "\n",
+    "# 4) Base con numero_de_cliente + promedio simple\n",
+    "ensamble <- pred_list[[1]][, .(numero_de_cliente)]\n",
+    "ensamble[, prob_ensamble := rowMeans(probs_mat)]\n",
+    "\n",
+    "# 5) Nombres de salida con PARAM$experimento\n",
+    "archivo_ensamble      <- sprintf(\"ensamble_produccion_%s.csv\", PARAM$experimento)\n",
+    "archivo_top11000      <- sprintf(\"ensamble_produccion_top11000_%s.csv\", PARAM$experimento)\n",
+    "\n",
+    "# 6) Guardar ensamble completo\n",
+    "fwrite(\n",
+    "  ensamble,\n",
+    "  file = archivo_ensamble\n",
+    ")\n",
+    "\n",
+    "# 7) Ordenar de mayor a menor y quedarme con top 11000\n",
+    "top_n <- 11000L\n",
+    "top_ensamble <- ensamble[order(-prob_ensamble)][\n",
+    "  1:min(.N, top_n),\n",
+    "  .(numero_de_cliente)\n",
+    "]\n",
+    "\n",
+    "# 8) Guardar solo lista de numero_de_cliente sin encabezado\n",
+    "fwrite(\n",
+    "  top_ensamble,\n",
+    "  file = archivo_top11000,\n",
+    "  col.names = FALSE\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
