termino de correr 3012

--- a/src/churn/C3012/APO3012-202107_100271.ipynb
+++ b/src/churn/C3012/APO3012-202107_100271.ipynb
@@ -3276,9 +3276,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-03 05:28:16 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# genero los modelitos\n",
     "dir.create( \"modelitos_produccion\", showWarnings= FALSE)\n",
@@ -3307,7 +3317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3365,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
