--- a/src/churn/C3020/APO3020-202107_250061.ipynb
+++ b/src/churn/C3020/APO3020-202107_250061.ipynb
@@ -18,9 +18,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-04 01:27:28 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 658638</td><td>35.2</td><td>1454665</td><td>77.7</td><td>1454665</td><td>77.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1222395</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975161</td><td>15.1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  658638 & 35.2 & 1454665 & 77.7 & 1454665 & 77.7\\\\\n",
+       "\tVcells & 1222395 &  9.4 & 8388608 & 64.0 & 1975161 & 15.1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  658638 | 35.2 | 1454665 | 77.7 | 1454665 | 77.7 |\n",
+       "| Vcells | 1222395 |  9.4 | 8388608 | 64.0 | 1975161 | 15.1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  658638 35.2 1454665    77.7 1454665  77.7\n",
+       "Vcells 1222395  9.4 8388608    64.0 1975161  15.1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# limpio la memoria\n",
     "Sys.time()\n",
@@ -30,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +102,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C3002/config_250061/_index.R\")"
+    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C3020/config_250061/_index.R\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sourcing: add_divisiones.R\n",
+      "\n",
+      "Sourcing: add_ratio.R\n",
+      "\n",
+      "Sourcing: agregar_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: agregar_var_rf.R\n",
+      "\n",
+      "Sourcing: aplicar_dataquality_zeros.R\n",
+      "\n",
+      "Sourcing: apply_sum_specs_multi.R\n",
+      "\n",
+      "Sourcing: audit_nullear.R\n",
+      "\n",
+      "Sourcing: build_variables_rotas.R\n",
+      "\n",
+      "Sourcing: crear_proporcion.R\n",
+      "\n",
+      "Sourcing: deflactar_por_ipc.R\n",
+      "\n",
+      "Sourcing: features_historicos_optimizados.R\n",
+      "\n",
+      "Sourcing: features_historicos.R\n",
+      "\n",
+      "Sourcing: flip.R\n",
+      "\n",
+      "Sourcing: interpolar_faltantes.R\n",
+      "\n",
+      "Sourcing: lags.R\n",
+      "\n",
+      "Sourcing: normalizar_ctrx_quarter.R\n",
+      "\n",
+      "Sourcing: print_utils.R\n",
+      "\n",
+      "Sourcing: run_features_historicas.R\n",
+      "\n",
+      "Sourcing: tendencias_y_mas.R\n",
+      "\n",
+      "Sourcing: ver_meses_rotos.R\n",
+      "\n",
+      "✅ Todas las funciones fueron cargadas correctamente.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "source(file.path(PARAM$paths$functions, \"index.R\"))\n",
     "source_functions(PARAM$paths$functions)"
@@ -69,16 +170,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'APO3002-202107_250061'"
+      ],
+      "text/latex": [
+       "'APO3002-202107\\_250061'"
+      ],
+      "text/markdown": [
+       "'APO3002-202107_250061'"
+      ],
+      "text/plain": [
+       "[1] \"APO3002-202107_250061\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "PARAM$experimento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
