--- a/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
+++ b/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "53480a19-f719-40ae-8183-4017c130a4c6",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cantidad de archivos de predicción encontrados: 200 \n"
+      "Cantidad de archivos de predicción encontrados: 200 \n",
+      "Clientes con predicciones ensambladas: 165093 \n",
+      "Clientes de 202109 con predicción: 165093 \n",
+      "Clientes usados para submit: 11000 \n"
      ]
     }
    ],
@@ -556,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "47a8796f-c84d-4937-b372-a71a72487e50",
    "metadata": {},
    "outputs": [],
@@ -566,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "453eaa71-ed79-48d1-aacf-5fa6afac6bb5",
    "metadata": {},
    "outputs": [],
@@ -577,10 +580,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f59db3d0-c910-4edf-9b37-09b699aaef34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Archivo creado: submit_ensamble_202109_top11000.csv\n"
+     ]
+    }
+   ],
    "source": [
     "fwrite(\n",
     "  df_ens_202109[1:N, .(numero_de_cliente)],\n",
