--- a/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
+++ b/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
@@ -1,6 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "be0dbb56-e2eb-4b59-bdc4-dec0f2733987",
+   "metadata": {},
+   "source": [
+    "# Ensamble Final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddbe0a06-2dda-4ba1-b9cc-a3c16b25b736",
+   "metadata": {},
+   "source": [
+    "Se ejecutaron dos workflows principales, cada uno con dos semillas (100271 y  250061) para todo el workflow: C3002 y C3012.\n",
+    "\n",
+    "Cada workflow genera 50 modelos y 50 predicciones utilizando zlgbm, por lo que el ensamble final es un ensamble promedio de 200 modelos.\n",
+    "\n",
+    "Ambos utilizaron los siguientes hiperparametros custom de zlgbm:\n",
+    "- qcanaritos: 5\n",
+    "- min_data_in_leaf: 500\n",
+    "- learning_rate: 1\n",
+    "- gradient_bound: 0.4\n",
+    "- num_iterations: 64\n",
+    "\n",
+    "Ruta a los WF:\n",
+    "- dmeyf2025/src/churn/C3012/APO3002-202107_100271.ipynb\n",
+    "- dmeyf2025/src/churn/C3012/APO3002-202107_250061.ipynb\n",
+    "- dmeyf2025/src/churn/C3012/APO3012-202107_250061.ipynb\n",
+    "- dmeyf2025/src/churn/C3012/APO3012-202107_100271.ipynb\n",
+    "\n",
+    "El modelo C3002 incluye (entre otros detalles):\n",
+    "- Ajuste por IPC\n",
+    "- NA para datos con problemas de data quality \n",
+    "- Lags y Delta Lags de 1º y 2º nivel\n",
+    "- Variables historicas: tendencias, promedio, desviaciones\n",
+    "- Variables Random Forest\n",
+    "- Testing en 202107 y training en todos los meses salvo 202106\n",
+    "\n",
+    "El modelo C3012 incluye (entre otros detalles):\n",
+    "- Ajuste por IPC\n",
+    "- NA para datos con problemas de data quality \n",
+    "- Lags y Delta Lags de 1º,2º,3º,6º y 12º nivel\n",
+    "- Variables historicas: tendencias, promedio, desviaciones\n",
+    "- Variables Random Forest\n",
+    "- Testing en 202107 y training en todos los meses salvo 202106\n",
+    "\n",
+    "La ruta a las funciones comunes es:\n",
+    "- dmeyf2025/src/churn/functions\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2fd5db13-d8a2-43bc-84ec-0046e9c1f4df",
