--- a/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
+++ b/src/churn/ensamble_competencia_3/ensamble_C3002_C3012-202109.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Cada workflow genera 50 modelos y 50 predicciones utilizando zlgbm, por lo que el ensamble final es un ensamble promedio de 200 modelos.\n",
     "\n",
-    "Primero se tienen que ejecutar completos los 4 WF (dos por cada semilla son) y luego se tiene que ejecutar este codigo, que hace el ensamble final y lo guarda.\n",
+    "Primero se tienen que ejecutar completos los 4 WF (dos modelos y cada uno dos semillas) y luego se tiene que ejecutar este codigo, que hace el ensamble final y lo guarda.\n",
     "\n",
     "Ambos utilizaron los siguientes hiperparametros custom de zlgbm:\n",
     "- qcanaritos: 5\n",
